// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormTextArea renders correctly with error 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span class="govuk-error-message"
      id="test-input-error"
>
  <span class="govuk-visually-hidden">
    Error:
  </span>
  Field is required
</span>
<textarea data-testid="comment-textarea"
          aria-describedby="test-input-error"
          class="govuk-textarea"
          id="test-input"
          name="testInput"
          rows="5"
>
</textarea>
`;

exports[`FormTextArea renders correctly with hint 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span id="test-input-hint"
      class="govuk-hint"
>
  Fill me in
</span>
<textarea data-testid="comment-textarea"
          aria-describedby="test-input-hint"
          class="govuk-textarea"
          id="test-input"
          name="testInput"
          rows="5"
>
</textarea>
`;

exports[`FormTextArea renders correctly with required props 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<textarea data-testid="comment-textarea"
          class="govuk-textarea"
          id="test-input"
          name="testInput"
          rows="5"
>
</textarea>
`;
